added first participants box iteration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,11 @@ services:
     ports:
       - 6379:6379
 
-transfer_arbeit:
-  image: nophramel/transfer_arbeit
-  ports:
-    - 9000:3000
-  environment:
-    - REDIS_HOST=redis
-  depends_on:
-    - redis
+# transfer_arbeit:
+#   image: nophramel/transfer_arbeit
+#   ports:
+#     - 9000:3000
+#   environment:
+#     - REDIS_HOST=redis
+#   depends_on:
+#     - redis
