--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,12 @@ services:
     ports:
       - 6379:6379
 
-transfer_arbeit:
-  image: nophramel/transfer_arbeit
-  ports:
-    - 9000:3000
-  environment:
-    - REDIS_HOST=redis
-  depends_on:
-    - redis
+  transfer_arbeit:
+    image: nophramel/transfer_arbeit
+    ports:
+      - 9000:3000
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    depends_on:
+      - redis
