corrected hostnames and namespaces

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: chat-deployment
-  namespace: {{ ebibi-teko3 }} # Replace with your namespace
+  namespace: teko3 # Replace with your namespace
 spec:
   replicas: 1
   selector:
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: chat
-          image: switzerchees/pvs-chat:latest
+          image: nophramel/transfer_arbeit:latest # image from my dockerhub?
           resources:
             limits:
               cpu: "0.5"
