--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: chat-ingress
-  namespace: {{ namespace }} # Replace with your namespace
+  namespace: teko3  # Replace with your namespace
   generation: 1
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
@@ -13,10 +13,10 @@ metadata:
 spec:
   tls:
     - hosts:
-        - {{ hostname }}.ch # Replace with your hostname in format *.teko.hackerman.ch Example: lastname.teko.hackerman.ch
-      secretName: {{ hostname }}-tls # Replace with your hostname in format *.teko.hackerman.ch Example: lastname.teko.hackerman.ch
+        - ebibi.teko.hackerman.ch # Replace with your hostname in format *.teko.hackerman.ch Example: lastname.teko.hackerman.ch
+      secretName: ebibi.teko.hackerman.ch-tls # Replace with your hostname in format *.teko.hackerman.ch Example: lastname.teko.hackerman.ch
   rules:
-    - host: {{ hostname }} # Replace with your hostname in format *.teko.hackerman.ch Example: lastname.teko.hackerman.ch
+    - host: ebibi.teko.hackerman.ch # Replace with your hostname in format *.teko.hackerman.ch Example: lastname.teko.hackerman.ch
       http:
         paths:
           - path: /
