--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: chat-service
-  namespace: {{ ebibi-teko3 }} # Replace with your namespace
+  namespace: teko3 # Replace with your namespace
 spec:
   selector:
     app: chat
